[package]
name = "paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
crossbeam = "0.8.2"
bytes = "1"
zmq = "0.10.0"

[dependencies.protobuf]
version = "3.2.0"
# features = ["with-bytes"]
